--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Jeff Way",
+            "name": "Claudio C",
             "email": "jeff.way@me.com"
         }
     ],
