--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": "^7.4",
         "symfony/yaml": "^2.8||^3.0|^4.0",
-        "doctrine/common": "^3",
+        "doctrine/common": "^2|^3",
         "jms/metadata": "^2.0"
     },
     "require-dev": {
