--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     ],
     "require": {
         "php": "^7.4",
-        "symfony/yaml": "^2.8||^3.0|^4.0",
+        "symfony/yaml": "^2.8||^3.0|^4.0|^5",
         "doctrine/common": "^2|^3",
-        "jms/metadata": "^2.0"
+        "jms/metadata": "^2"
     },
     "require-dev": {
-        "doctrine/orm": "^2.10",
+        "doctrine/orm": "^2",
         "phpunit/phpunit": "^7.1",
         "nelmio/alice": "^3.3",
         "phpstan/phpstan": "^0.11.7",
